Run build on action

--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -24,3 +24,8 @@ jobs:
       -
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
+      -
+        name: Build
+        run: |
+          ./run build
+          # docker build . # will run buildx
