--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -5,5 +5,5 @@ services:
     build:
       context: hello
       args:
-        APK_SOURCE: "mirrors.tuna.tsinghua.edu.cn"
-        # APK_SOURCE: "dl-cdn.alpinelinux.org"
+        # APK_SOURCE: "mirrors.tuna.tsinghua.edu.cn"
+        APK_SOURCE: "dl-cdn.alpinelinux.org"
