--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -26,8 +26,12 @@ jobs:
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
       -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
         name: Build
         run: |
           ./build
-          # ./run build
-          # docker build . # will run buildx
